--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,26 @@
 /* Global Styles */
 
+.text-white {
+  color: #ffffff;
+}
+
+.home-section {
+  background-image: url('../img/hero.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+/* reservation section */
+.reservation-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #eeeeee;
+}
 /* Small Screens */
 @media only screen and (min-width : 768px) {
 }
